--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
                 <h1>DESENVOLVEDOR FRONTEND</h1>
-                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e
-                    desenvolvimento de
-                    sistemas UMFG
+                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em Análise e
+                    Desenvolvimento de
+                    Sistemas UMFG
                     (2023).
                 </p>
                 <div class="social">
@@ -129,7 +129,7 @@
                 </div>
                 <div class="show-project-img">
                     <span class="text-span position-1">
-                        <h3><b>NatureShop</b></h3>
+                        <h3><b>NatureShopp</b></h3>
                         <p>Loja de produtos naturais.</p>
                         <div class="tech-used">
                             <i class="fa-brands fa-html5" title="HTML"></i>
@@ -141,7 +141,7 @@
                                 class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
-                        <img src="./img/natureshop.png" alt="">
+                        <img src="./img/natureshopnew.png" alt="">
                     </span>
                 </div>
                 <div class="show-project-img">
