add new img natureshopp

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
-                        <img src="./img/natureshopnew.png" alt="">
+                        <img src="./img/natureshopnew2.png" alt="">
                     </span>
                 </div>
                 <div class="show-project-img">
