feat: add new element to introduction

--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
     <main>
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
-                <h1>DESENVOLVEDOR FRONTEND</h1>
+                <div class="title">
+                    <span class="my-name">FELIPE OLIVEIRA</span>
+                    <h1 class="my-job">
+                        DESENVOLVEDOR FRONTEND 
+                        <i class="fa-solid fa-code"></i>
+                    </h1>
+                </div>
                 <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em Análise e
                     Desenvolvimento de
                     Sistemas UMFG
