--- a/index.html
+++ b/index.html
@@ -59,15 +59,24 @@
                     (2023).
                 </p>
                 <div class="social">
-                    <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
-                        <i class="fa-brands fa-linkedin" title="Linkedin"></i>
-                    </a>
-                    <a href="https://github.com/Flipe124" target="_blank">
-                        <i class="fa-brands fa-github" title="GitHub"></i>
-                    </a>
-                    <a href="https://gitlab.com/Flipe124" target="_blank">
-                        <i class="fa-brands fa-gitlab" title="GitLab"></i>
-                    </a>
+                    <span class="tooltip">
+                        <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
+                            <i class="fa-brands fa-linkedin" title="Linkedin"></i>
+                        </a>
+                        <span class="tooltiptext">Linkedin</span>
+                    </span>
+                    <span class="tooltip">
+                        <a href="https://github.com/Flipe124" target="_blank">
+                            <i class="fa-brands fa-github" title="GitHub"></i>
+                        </a>
+                        <span class="tooltiptext">GitHub</span>
+                    </span>
+                    <span class="tooltip">
+                        <a href="https://gitlab.com/Flipe124" target="_blank">
+                            <i class="fa-brands fa-gitlab" title="GitLab"></i>
+                        </a>
+                        <span class="tooltiptext">GitLab</span>
+                    </span>
                 </div>
                 <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
             </div>
