--- a/index.html
+++ b/index.html
@@ -49,18 +49,21 @@
                 <div class="title">
                     <span class="my-name">FELIPE OLIVEIRA</span>
                     <h1 class="my-job">
-                        DESENVOLVEDOR FRONTEND 
+                        DESENVOLVEDOR WEB
                         <i class="fa-solid fa-code"></i>
                     </h1>
                 </div>
-                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em Análise e
-                    Desenvolvimento de
-                    Sistemas UMFG
-                    (2023).
+                <p style="color: rgb(221, 221, 221);">
+                    Olá, pessoal!  Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
+                        Sistemas 🚀</b> pela UMFG (2023). Tenho conhecimentos em desenvolvimento web, trabalhando com
+                    as linguagens <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, e <b>PHP</b>. Além disso, tenho prática
+                    no uso das ferramentas <b>Git</b> e <b>Figma</b>. Estou em busca de enfrentar novos desafios e
+                    contribuir para projetos inovadores. Vamos criar algo incrível juntos! 💻✨
                 </p>
                 <div class="social">
                     <span class="tooltip">
-                        <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/" target="_blank">
+                        <a href="https://www.linkedin.com/in/felipe-oliveira-dos-santos-morais-a016991b9/"
+                            target="_blank">
                             <i class="fa-brands fa-linkedin" title="Linkedin"></i>
                         </a>
                         <span class="tooltiptext">Linkedin</span>
@@ -152,7 +155,7 @@
                             <i class="fa-brands fa-square-js" title="Javascript"></i>
                             <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                         </div>
-                        <a class="btn-access-project" href="https://" target="_blank">Acessar <i
+                        <a class="btn-access-project" href="https://natureshopp.netlify.app" target="_blank">Acessar <i
                                 class="fa-solid fa-caret-right"></i></a>
                     </span>
                     <span class="project-img reverse-project-img position-2">
