Feat: mod name section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link active" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#certification">Certificados</a>
+                            <a class="nav-link active" href="#certification">Conhecimentos</a>
                         </li>
                     </ul>
                 </div>
@@ -183,7 +183,7 @@
             </div>
         </section>
         <section class="certification" id="certification">
-            <h2>CERTIFICADOS</h1>
+            <h2>CONHECIMENTOS</h1>
                 <h6><b>Formação Acadêmica</b></h6>
                 <div class="show-certification">
                     <div class="img">
