--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link active" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#certification">Conhecimentos</a>
+                            <a class="nav-link active" href="#certification">Trajetória</a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
                     </h1>
                 </div>
                 <p style="color: rgb(221, 221, 221);">
-                    Olá, pessoal!  Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
+                    Olá, pessoal! Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
                         Sistemas 🚀</b> pela UMFG (2023). Tenho conhecimentos em desenvolvimento web, trabalhando com
                     as linguagens <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, e <b>PHP</b>. Além disso, tenho prática
                     no uso das ferramentas <b>Git</b> e <b>Figma</b>. Estou em busca de enfrentar novos desafios e
@@ -183,49 +183,90 @@
             </div>
         </section>
         <section class="certification" id="certification">
-            <h2>CONHECIMENTOS</h1>
-                <h6><b>Formação Acadêmica</b></h6>
-                <div class="show-certification">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
+            <h2>TRAJETÓRIA</h1>
+                <span><b>Formação Acadêmica</b></h6>
+                    <div class="show-certification">
+                        <div class="img">
+                            <img src="./img/logotipo-umfg.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
+                            <span>UMFG - 2023</span>
+                        </div>
                     </div>
-                    <div class="title">
-                        <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
-                        <span>UMFG - 2023</span>
+                    <div class="line line-small"></div>
+                    <span><b>Experiência</b></span>
+                    <div class="show-certification">
+                        <div class="img">
+                            <img src="./img/wdevel-logo.png" alt="">
+                        </div>
+                        <div class="title">
+                            <h6><b>Estágiario de Desenvolvimento Web</b></h6>
+                            <span>WDevel - 2022</span>
+                        </div>
                     </div>
-                </div>
-                <div class="line"></div>
-                <h6><b>Certificados</b></h6>
-                <div class="show-certification">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Oficina de GitHub</b></h6>
-                        <span>UMFG - 2022</span>
-                    </div>
-                </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Minicurso de Aplicação Web</b></h6>
-                        <span>UMFG - 2021</span>
-                    </div>
-                </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
-                    <div class="img">
-                        <img src="./img/logotipo-ifto.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Administrador de Banco de Dados</b></h6>
-                        <span>IFTO - 2020</span>
-                    </div>
-                </div>
-                <!-- <div class="line line-small"></div> -->
+                    <div class="line"></div>
+                    <span><b>Certificados</b></h6>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/udemy-logo.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Curso de Desenvolvedor Web</b></h6>
+                                <span>Udemy - Em andamento</span>
+                            </div>
+                        </div>
+                        <div class="line line-small"></div>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/logotipo-umfg.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Oficina de GitHub</b></h6>
+                                <span>UMFG - 2022</span>
+                            </div>
+                        </div>
+                        <div class="line line-small"></div>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/logotipo-umfg.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Oficina de Vue.js</b></h6>
+                                <span>UMFG - 2021</span>
+                            </div>
+                        </div>
+                        <div class="line line-small"></div>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/logotipo-umfg.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Oficina de Flutter</b></h6>
+                                <span>UMFG - 2021</span>
+                            </div>
+                        </div>
+                        <div class="line line-small"></div>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/logotipo-umfg.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Minicurso de Aplicação Web</b></h6>
+                                <span>UMFG - 2021</span>
+                            </div>
+                        </div>
+                        <div class="line line-small"></div>
+                        <div class="show-certification">
+                            <div class="img">
+                                <img src="./img/logotipo-ifto.jpg" alt="">
+                            </div>
+                            <div class="title">
+                                <h6><b>Administrador de Banco de Dados</b></h6>
+                                <span>IFTO - 2020</span>
+                            </div>
+                        </div>
+                        <!-- <div class="line line-small"></div> -->
 
         </section>
         <section class="footer">
