feat: mod name field

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                     <div class="line"></div>
-                    <span><b>Certificados</b></h6>
+                    <span><b>Cursos</b></h6>
                         <div class="show-certification">
                             <div class="img">
                                 <img src="./img/udemy-logo.jpg" alt="">
