feat: add new section skill status

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/apresentation.css">
     <link rel="stylesheet" href="./css/certification.css">
     <link rel="stylesheet" href="./css/project.css">
+    <link rel="stylesheet" href="./css/skill-status.css">
 </head>
 
 <body>
@@ -183,91 +184,132 @@
             </div>
         </section>
         <section class="certification" id="certification">
-            <h2>TRAJETÓRIA</h1>
-                <span><b>Formação Acadêmica</b></h6>
-                    <div class="show-certification">
-                        <div class="img">
-                            <img src="./img/logotipo-umfg.jpg" alt="">
-                        </div>
-                        <div class="title">
-                            <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
-                            <span>UMFG - 2023</span>
-                        </div>
+            <h2>TRAJETÓRIA</h2>
+            <span><b>Formação Acadêmica</b></span>
+            <div class="show-certification">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
+                    <span>UMFG - 2023</span>
+                </div>
+            </div>
+            <div class="line line-small"></div>
+            <span><b>Experiência</b></span>
+            <div class="show-certification">
+                <div class="img">
+                    <img src="./img/wdevel-logo.png" alt="">
+                </div>
+                <div class="title">
+                    <h6><b>Estágiario de Desenvolvimento Web</b></h6>
+                    <span>WDevel - 2022</span>
+                </div>
+            </div>
+            <div class="line"></div>
+            <span><b>Cursos</b></h6>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/udemy-logo.jpg" alt="">
                     </div>
-                    <div class="line line-small"></div>
-                    <span><b>Experiência</b></span>
-                    <div class="show-certification">
-                        <div class="img">
-                            <img src="./img/wdevel-logo.png" alt="">
-                        </div>
-                        <div class="title">
-                            <h6><b>Estágiario de Desenvolvimento Web</b></h6>
-                            <span>WDevel - 2022</span>
-                        </div>
+                    <div class="title">
+                        <h6><b>Curso de Desenvolvedor Web</b></h6>
+                        <span>Udemy - Em andamento</span>
                     </div>
-                    <div class="line"></div>
-                    <span><b>Cursos</b></h6>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/udemy-logo.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Curso de Desenvolvedor Web</b></h6>
-                                <span>Udemy - Em andamento</span>
-                            </div>
-                        </div>
-                        <div class="line line-small"></div>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/logotipo-umfg.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Oficina de GitHub</b></h6>
-                                <span>UMFG - 2022</span>
-                            </div>
-                        </div>
-                        <div class="line line-small"></div>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/logotipo-umfg.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Oficina de Vue.js</b></h6>
-                                <span>UMFG - 2021</span>
-                            </div>
-                        </div>
-                        <div class="line line-small"></div>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/logotipo-umfg.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Oficina de Flutter</b></h6>
-                                <span>UMFG - 2021</span>
-                            </div>
-                        </div>
-                        <div class="line line-small"></div>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/logotipo-umfg.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Minicurso de Aplicação Web</b></h6>
-                                <span>UMFG - 2021</span>
-                            </div>
-                        </div>
-                        <div class="line line-small"></div>
-                        <div class="show-certification">
-                            <div class="img">
-                                <img src="./img/logotipo-ifto.jpg" alt="">
-                            </div>
-                            <div class="title">
-                                <h6><b>Administrador de Banco de Dados</b></h6>
-                                <span>IFTO - 2020</span>
-                            </div>
-                        </div>
-                        <!-- <div class="line line-small"></div> -->
-
+                </div>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Oficina de GitHub</b></h6>
+                        <span>UMFG - 2022</span>
+                    </div>
+                </div>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Oficina de Vue.js</b></h6>
+                        <span>UMFG - 2021</span>
+                    </div>
+                </div>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Oficina de Flutter</b></h6>
+                        <span>UMFG - 2021</span>
+                    </div>
+                </div>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-umfg.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Minicurso de Aplicação Web</b></h6>
+                        <span>UMFG - 2021</span>
+                    </div>
+                </div>
+                <div class="line line-small"></div>
+                <div class="show-certification">
+                    <div class="img">
+                        <img src="./img/logotipo-ifto.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <h6><b>Administrador de Banco de Dados</b></h6>
+                        <span>IFTO - 2020</span>
+                    </div>
+                </div>
+        </section>
+        <section class="skill-status">
+            <div class="title-section">HABILIDADES</div>
+            <div class="skill-container">
+                <div class="skill-name">HTML</div>
+                <span class="level">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </span>
+            </div>
+            <div class="skill-container">
+                <div class="skill-name">CSS</div>
+                <span class="level">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </span>
+            </div>
+            <div class="skill-container">
+                <div class="skill-name">JavaScript</div>
+                <span class="level">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </span>
+            </div>
+            <div class="skill-container">
+                <div class="skill-name">PHP</div>
+                <span class="level">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </span>
+            </div>
         </section>
         <section class="footer">
             <div class="line-full"></div>
