--- a/index.html
+++ b/index.html
@@ -270,45 +270,59 @@
         </section>
         <section class="skill-status">
             <div class="title-section">HABILIDADES</div>
-            <div class="skill-container">
-                <div class="skill-name">HTML</div>
-                <span class="level">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </span>
-            </div>
-            <div class="skill-container">
-                <div class="skill-name">CSS</div>
-                <span class="level">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </span>
-            </div>
-            <div class="skill-container">
-                <div class="skill-name">JavaScript</div>
-                <span class="level">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </span>
-            </div>
-            <div class="skill-container">
-                <div class="skill-name">PHP</div>
-                <span class="level">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                </span>
+            <div class="skills">
+                <div class="skill-container">
+                    <div class="skill-name">
+                        HTML
+                        <i class="fa-brands fa-html5" title="HTML"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container">
+                    <div class="skill-name">
+                        CSS
+                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container">
+                    <div class="skill-name">
+                        JavaScript
+                        <i class="fa-brands fa-square-js" title="Javascript"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container">
+                    <div class="skill-name">
+                        PHP
+                        <i class="fa-brands fa-php"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
             </div>
         </section>
         <section class="footer">
