feat: add styles of hover skills

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <section class="skill-status">
             <div class="title-section">HABILIDADES</div>
             <div class="skills">
-                <div class="skill-container">
+                <div class="skill-container html">
                     <div class="skill-name">
                         HTML
                         <i class="fa-brands fa-html5" title="HTML"></i>
@@ -284,7 +284,7 @@
                         <i class="fa-regular fa-star"></i>
                     </span>
                 </div>
-                <div class="skill-container">
+                <div class="skill-container css">
                     <div class="skill-name">
                         CSS
                         <i class="fa-brands fa-css3-alt" title="CSS"></i>
@@ -297,7 +297,7 @@
                         <i class="fa-regular fa-star"></i>
                     </span>
                 </div>
-                <div class="skill-container">
+                <div class="skill-container js">
                     <div class="skill-name">
                         JavaScript
                         <i class="fa-brands fa-square-js" title="Javascript"></i>
@@ -310,7 +310,7 @@
                         <i class="fa-regular fa-star"></i>
                     </span>
                 </div>
-                <div class="skill-container">
+                <div class="skill-container php">
                     <div class="skill-name">
                         PHP
                         <i class="fa-brands fa-php"></i>
