feat: add new skill status e mod location

--- a/index.html
+++ b/index.html
@@ -124,6 +124,115 @@
                 </span>
             </div>
         </section>
+        <section class="skill-status">
+            <div class="title-section">HABILIDADES</div>
+            <div class="skills">
+                <div class="skill-container html">
+                    <div class="skill-name">
+                        HTML
+                        <i class="fa-brands fa-html5" title="HTML"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container css">
+                    <div class="skill-name">
+                        CSS
+                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container js">
+                    <div class="skill-name">
+                        JavaScript
+                        <i class="fa-brands fa-square-js" title="Javascript"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container php">
+                    <div class="skill-name">
+                        PHP
+                        <i class="fa-brands fa-php"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container bootstrap">
+                    <div class="skill-name">
+                        Bootstrap
+                        <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container js">
+                    <div class="skill-name">
+                        Jquery
+                        <i class="fas fa-cogs" title="Jquery"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container git">
+                    <div class="skill-name">
+                        Git
+                        <i class="fa-brands fa-git-alt" title="Git"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+                <div class="skill-container figma">
+                    <div class="skill-name">
+                        Figma
+                        <i class="fa-brands fa-figma" title="Figma"></i>
+                    </div>
+                    <span class="level">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </span>
+                </div>
+            </div>
+        </section>
         <section class="project" id="project">
             <h1 class="color-black">PROJETOS</h1>
             <div class="projects">
@@ -183,6 +292,7 @@
                 </div>
             </div>
         </section>
+
         <section class="certification" id="certification">
             <h2>TRAJETÓRIA</h2>
             <span><b>Formação Acadêmica</b></span>
@@ -268,63 +378,7 @@
                     </div>
                 </div>
         </section>
-        <section class="skill-status">
-            <div class="title-section">HABILIDADES</div>
-            <div class="skills">
-                <div class="skill-container html">
-                    <div class="skill-name">
-                        HTML
-                        <i class="fa-brands fa-html5" title="HTML"></i>
-                    </div>
-                    <span class="level">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </span>
-                </div>
-                <div class="skill-container css">
-                    <div class="skill-name">
-                        CSS
-                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                    </div>
-                    <span class="level">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </span>
-                </div>
-                <div class="skill-container js">
-                    <div class="skill-name">
-                        JavaScript
-                        <i class="fa-brands fa-square-js" title="Javascript"></i>
-                    </div>
-                    <span class="level">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </span>
-                </div>
-                <div class="skill-container php">
-                    <div class="skill-name">
-                        PHP
-                        <i class="fa-brands fa-php"></i>
-                    </div>
-                    <span class="level">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                    </span>
-                </div>
-            </div>
-        </section>
+
         <section class="footer">
             <div class="line-full"></div>
             <div class="dev">Copyright © 2023 Felipe Oliveira</div>
