--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                             <a class="nav-link active" aria-current="page" href="#">Início</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" href="#skill">Habilidades</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
@@ -124,7 +127,7 @@
                 </span>
             </div>
         </section>
-        <section class="skill-status">
+        <section class="skill-status" id="skill">
             <div class="title-section">HABILIDADES</div>
             <div class="skills">
                 <div class="skill-container html">
