feat: add class to title section

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
         </section>
         <section class="project" id="project">
-            <h1 class="color-black">PROJETOS</h1>
+            <div class="title-section">PROJETOS</div>
             <div class="projects">
                 <div class="show-project-img">
                     <div class="project-img">
@@ -297,7 +297,7 @@
         </section>
 
         <section class="certification" id="certification">
-            <h2>TRAJETÓRIA</h2>
+            <div class="title-section">TRAJETÓRIA</div>
             <span><b>Formação Acadêmica</b></span>
             <div class="show-certification">
                 <div class="img">
