--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/certification.css">
     <link rel="stylesheet" href="./css/project.css">
     <link rel="stylesheet" href="./css/skill-status.css">
+    <link rel="stylesheet" href="./css/scroll-reveal.css">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
     </header>
     <main>
         <section class="apresentation my-padding" id="apresentation">
-            <div class="half mt-5">
+            <div class="half mt-5 my-info-reveal">
                 <div class="title">
                     <span class="my-name">FELIPE OLIVEIRA</span>
                     <h1 class="my-job">
@@ -87,12 +88,12 @@
                 </div>
                 <!-- <button class="btn btn-success"><b>BAIXAR CV</b></button> -->
             </div>
-            <div class="half">
+            <div class="half my-image-reveal">
                 <div class="text-center flutuar">
                     <img id="my-image" src="./img/Developer activity-amico.png">
                 </div>
             </div>
-            <div class="skill">
+            <div class="skill my-skill-reveal">
                 <span class="tooltip">
                     <i class="fa-brands fa-html5" title="HTML"></i>
                     <span class="tooltiptext">HTML</span>
@@ -128,8 +129,8 @@
             </div>
         </section>
         <section class="skill-status" id="skill">
-            <div class="title-section">HABILIDADES</div>
-            <div class="skills">
+            <div class="title-section title-reveal">HABILIDADES</div>
+            <div class="skills skills-reveal">
                 <div class="skill-container html">
                     <div class="skill-name">
                         HTML
@@ -237,13 +238,13 @@
             </div>
         </section>
         <section class="project" id="project">
-            <div class="title-section">PROJETOS</div>
+            <div class="title-section title-reveal">PROJETOS</div>
             <div class="projects">
                 <div class="show-project-img">
-                    <div class="project-img">
+                    <div class="project-img project-left-reveal">
                         <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
                     </div>
-                    <span class="text-span">
+                    <span class="text-span project-right-reveal">
                         <h3><b>OPENFINANCE</b></h3>
                         <p>Sistema de gerenciamento de finanças pessoais.</p>
                         <div class="tech-used">
@@ -259,7 +260,7 @@
                     </span>
                 </div>
                 <div class="show-project-img">
-                    <span class="text-span position-1">
+                    <span class="text-span position-1 project-left-reveal">
                         <h3><b>NatureShopp</b></h3>
                         <p>Loja de produtos naturais.</p>
                         <div class="tech-used">
@@ -271,15 +272,15 @@
                         <a class="btn-access-project" href="https://natureshopp.netlify.app" target="_blank">Acessar <i
                                 class="fa-solid fa-caret-right"></i></a>
                     </span>
-                    <span class="project-img reverse-project-img position-2">
+                    <span class="project-img reverse-project-img position-2 project-right-reveal">
                         <img src="./img/natureshopnew2.png" alt="">
                     </span>
                 </div>
                 <div class="show-project-img">
-                    <div class="project-img">
+                    <div class="project-img project-left-reveal">
                         <img src="./img/api-github-full.jpg" alt="">
                     </div>
-                    <span class="text-span">
+                    <span class="text-span project-right-reveal">
                         <h3><b>API GITHUB</b></h3>
                         <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
                         <div class="tech-used">
@@ -297,9 +298,9 @@
         </section>
 
         <section class="certification" id="certification">
-            <div class="title-section">TRAJETÓRIA</div>
-            <span><b>Formação Acadêmica</b></span>
-            <div class="show-certification">
+            <div class="title-section title-reveal">TRAJETÓRIA</div>
+            <span class="certification-left-reveal"><b>Formação Acadêmica</b></span>
+            <div class="show-certification certification-reveal">
                 <div class="img">
                     <img src="./img/logotipo-umfg.jpg" alt="">
                 </div>
@@ -308,9 +309,9 @@
                     <span>UMFG - 2023</span>
                 </div>
             </div>
-            <div class="line line-small"></div>
-            <span><b>Experiência</b></span>
-            <div class="show-certification">
+            <div class="line line-small certification-left-reveal"></div>
+            <span class="certification-left-reveal"><b>Experiência</b></span>
+            <div class="show-certification certification-reveal">
                 <div class="img">
                     <img src="./img/wdevel-logo.png" alt="">
                 </div>
@@ -319,9 +320,9 @@
                     <span>WDevel - 2022</span>
                 </div>
             </div>
-            <div class="line"></div>
-            <span><b>Cursos</b></h6>
-                <div class="show-certification">
+            <div class="line certification-left-reveal"></div>
+            <span class="certification-left-reveal"><b>Cursos</b></h6>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/udemy-logo.jpg" alt="">
                     </div>
@@ -330,8 +331,8 @@
                         <span>Udemy - Em andamento</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
+                <div class="line line-small certification-left-reveal"></div>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/logotipo-umfg.jpg" alt="">
                     </div>
@@ -340,8 +341,8 @@
                         <span>UMFG - 2022</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
+                <div class="line line-small certification-left-reveal"></div>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/logotipo-umfg.jpg" alt="">
                     </div>
@@ -350,8 +351,8 @@
                         <span>UMFG - 2021</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
+                <div class="line line-small certification-left-reveal"></div>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/logotipo-umfg.jpg" alt="">
                     </div>
@@ -360,8 +361,8 @@
                         <span>UMFG - 2021</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
+                <div class="line line-small certification-left-reveal"></div>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/logotipo-umfg.jpg" alt="">
                     </div>
@@ -370,8 +371,8 @@
                         <span>UMFG - 2021</span>
                     </div>
                 </div>
-                <div class="line line-small"></div>
-                <div class="show-certification">
+                <div class="line line-small certification-left-reveal"></div>
+                <div class="show-certification certification-reveal">
                     <div class="img">
                         <img src="./img/logotipo-ifto.jpg" alt="">
                     </div>
@@ -382,7 +383,7 @@
                 </div>
         </section>
 
-        <section class="footer">
+        <section class="footer footer-reveal">
             <div class="line-full"></div>
             <div class="dev">Copyright © 2023 Felipe Oliveira</div>
         </section>
@@ -394,6 +395,8 @@
     <script src="./script/navbar.js"></script>
     <script src="./script/apresentation.js"></script>
     <script src="https://kit.fontawesome.com/1abad94d22.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./script/scroll_reveal.js"></script>
 
 </body>
 
