feat: mod href project

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                         </div>
                         <a class="btn-access-project"
-                            href="https://southamerica-east1-lambda-js.cloudfunctions.net/lambdaJs"
+                            href="https://github.com/Flipe124/atividade-lambda"
                             target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
