refactor: rename class and mod tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Felipe Oliveira">
     <title>Portfólio | Felipe Oliveira</title>
     <link rel="shortcut  icon" type="imagem/png" href="./img/favicon-32x32.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/apresentation.css">
-    <link rel="stylesheet" href="./css/certification.css">
+    <link rel="stylesheet" href="./css/journey.css">
     <link rel="stylesheet" href="./css/project.css">
     <link rel="stylesheet" href="./css/skill-status.css">
     <link rel="stylesheet" href="./css/scroll-reveal.css">
@@ -41,7 +42,7 @@
                             <a class="nav-link active" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#certification">Trajetória</a>
+                            <a class="nav-link active" href="#journey">Trajetória</a>
                         </li>
                     </ul>
                 </div>
@@ -58,7 +59,7 @@
                         <i class="fa-solid fa-code"></i>
                     </h1>
                 </div>
-                <p style="color: rgb(221, 221, 221);">
+                <p>
                     Olá, pessoal! Recentemente, concluí minha formação em <b>Análise e Desenvolvimento de
                         Sistemas 🚀</b> pela UMFG (2023). Tenho conhecimentos em desenvolvimento web, trabalhando com
                     as linguagens <b>HTML</b>, <b>CSS</b>, <b>JavaScript</b>, e <b>PHP</b>. Além disso, tenho prática
@@ -289,97 +290,96 @@
                             <i class="fa-brands fa-square-js" title="Javascript"></i>
                             <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                         </div>
-                        <a class="btn-access-project"
-                            href="https://github.com/Flipe124/atividade-lambda"
+                        <a class="btn-access-project" href="https://github.com/Flipe124/atividade-lambda"
                             target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
             </div>
         </section>
-        <section class="certification" id="certification">
+        <section class="journey" id="journey">
             <div class="title-section title-reveal">TRAJETÓRIA</div>
-            <span class="certification-left-reveal"><b>Formação Acadêmica</b></span>
-            <div class="show-certification certification-reveal">
+            <span class="journey-left-reveal"><b>Formação Acadêmica</b></span>
+            <div class="show-journey journey-reveal">
                 <div class="img">
                     <img src="./img/logotipo-umfg.jpg" alt="">
                 </div>
                 <div class="title">
-                    <h6><b>Análise e Desenvolvimento de Sistemas</b></h6>
+                    <div><b>Análise e Desenvolvimento de Sistemas</b></div>
                     <span>UMFG - 2023</span>
                 </div>
             </div>
-            <div class="line line-small certification-left-reveal"></div>
-            <span class="certification-left-reveal"><b>Experiência</b></span>
-            <div class="show-certification certification-reveal">
+            <div class="line line-small journey-left-reveal"></div>
+            <span class="journey-left-reveal"><b>Experiência</b></span>
+            <div class="show-journey journey-reveal">
                 <div class="img">
                     <img src="./img/wdevel-logo.png" alt="">
                 </div>
                 <div class="title">
-                    <h6><b>Estágiario de Desenvolvimento Web</b></h6>
+                    <div><b>Estágiario de Desenvolvimento Web</b></div>
                     <span>WDevel - 2022</span>
                 </div>
             </div>
-            <div class="line certification-left-reveal"></div>
-            <span class="certification-left-reveal"><b>Cursos</b></h6>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/udemy-logo.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Curso de Desenvolvedor Web</b></h6>
-                        <span>Udemy - Em andamento</span>
-                    </div>
+            <div class="line journey-left-reveal"></div>
+            <span class="journey-left-reveal"><b>Cursos</b></span>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/udemy-logo.jpg" alt="">
                 </div>
-                <div class="line line-small certification-left-reveal"></div>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Oficina de GitHub</b></h6>
-                        <span>UMFG - 2022</span>
-                    </div>
+                <div class="title">
+                    <div><b>Curso de Desenvolvedor Web</b></div>
+                    <span>Udemy - Em andamento</span>
                 </div>
-                <div class="line line-small certification-left-reveal"></div>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Oficina de Vue.js</b></h6>
-                        <span>UMFG - 2021</span>
-                    </div>
+            </div>
+            <div class="line line-small journey-left-reveal"></div>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
                 </div>
-                <div class="line line-small certification-left-reveal"></div>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Oficina de Flutter</b></h6>
-                        <span>UMFG - 2021</span>
-                    </div>
+                <div class="title">
+                    <div><b>Oficina de GitHub</b></div>
+                    <span>UMFG - 2022</span>
                 </div>
-                <div class="line line-small certification-left-reveal"></div>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/logotipo-umfg.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Minicurso de Aplicação Web</b></h6>
-                        <span>UMFG - 2021</span>
-                    </div>
+            </div>
+            <div class="line line-small journey-left-reveal"></div>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
                 </div>
-                <div class="line line-small certification-left-reveal"></div>
-                <div class="show-certification certification-reveal">
-                    <div class="img">
-                        <img src="./img/logotipo-ifto.jpg" alt="">
-                    </div>
-                    <div class="title">
-                        <h6><b>Administrador de Banco de Dados</b></h6>
-                        <span>IFTO - 2020</span>
-                    </div>
+                <div class="title">
+                    <div><b>Oficina de Vue.js</b></div>
+                    <span>UMFG - 2021</span>
                 </div>
+            </div>
+            <div class="line line-small journey-left-reveal"></div>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <div><b>Oficina de Flutter</b></div>
+                    <span>UMFG - 2021</span>
+                </div>
+            </div>
+            <div class="line line-small journey-left-reveal"></div>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/logotipo-umfg.jpg" alt="">
+                </div>
+                <div class="title">
+                    <div><b>Minicurso de Aplicação Web</b></div>
+                    <span>UMFG - 2021</span>
+                </div>
+            </div>
+            <div class="line line-small journey-left-reveal"></div>
+            <div class="show-journey journey-reveal">
+                <div class="img">
+                    <img src="./img/logotipo-ifto.jpg" alt="">
+                </div>
+                <div class="title">
+                    <div><b>Administrador de Banco de Dados</b></div>
+                    <span>IFTO - 2020</span>
+                </div>
+            </div>
         </section>
         <section class="footer footer-reveal">
             <div class="line-full"></div>
