refactor: changing tag to semantic tag

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
         </section>
         <section class="skill-status" id="skill">
-            <div class="title-section title-reveal">HABILIDADES</div>
+            <h2 class="title-section title-reveal">HABILIDADES</h2>
             <div class="skills skills-reveal">
                 <div class="skill-container html">
                     <div class="skill-name">
@@ -239,7 +239,7 @@
             </div>
         </section>
         <section class="project" id="project">
-            <div class="title-section title-reveal">PROJETOS</div>
+            <h2 class="title-section title-reveal">PROJETOS</h2>
             <div class="projects">
                 <div class="show-project-img">
                     <div class="project-img project-left-reveal">
@@ -297,7 +297,7 @@
             </div>
         </section>
         <section class="journey" id="journey">
-            <div class="title-section title-reveal">TRAJETÓRIA</div>
+            <h2 class="title-section title-reveal">TRAJETÓRIA</h2>
             <span class="journey-left-reveal"><b>Formação Acadêmica</b></span>
             <div class="show-journey journey-reveal">
                 <div class="img">
