feat: mod title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="title">
                     <span class="my-name">FELIPE OLIVEIRA</span>
                     <h1 class="my-job">
-                        DESENVOLVEDOR WEB
+                        DESENVOLVEDOR FRONT-END
                         <i class="fa-solid fa-code"></i>
                     </h1>
                 </div>
