--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 </span>
                 <span class="tooltip">
                     <i class="fas fa-cogs" title="Jquery"></i>
+                    <!-- <img src="./img/jquerySvg.svg" alt="" srcset=""> -->
                     <span class="tooltiptext">Jquery</span>
                 </span>
                 <span class="tooltip">
