--- a/index.html
+++ b/index.html
@@ -257,7 +257,12 @@
                             <i class="fas fa-cogs" title="Jquery"></i>
                         </div>
                         <a class="btn-access-project" href="https://github.com/Flipe124/estagio-supervisionado"
-                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i>
+                            target="_blank">Código
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a class="btn-access-project" href="#"
+                            target="_blank">Live Demo
+                            <i class="fa-solid fa-play"></i>
                         </a>
                     </span>
                 </div>
@@ -271,8 +276,12 @@
                             <i class="fa-brands fa-square-js" title="Javascript"></i>
                             <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                         </div>
-                        <a class="btn-access-project" href="https://natureshopp.netlify.app" target="_blank">Acessar <i
-                                class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="#" target="_blank">Código
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a class="btn-access-project" href="https://natureshopp.netlify.app" target="_blank">Live Demo
+                            <i class="fa-solid fa-play"></i>
+                        </a>
                     </span>
                     <span class="project-img reverse-project-img position-2 project-right-reveal">
                         <img src="./img/natureshopnew2.png" alt="">
@@ -292,7 +301,11 @@
                             <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
                         </div>
                         <a class="btn-access-project" href="https://github.com/Flipe124/atividade-lambda"
-                            target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                            target="_blank">Código <i class="fa-brands fa-github"></i>
+                        </a>
+                        <a class="btn-access-project" href="#" target="_blank">Live Demo <i
+                                class="fa-solid fa-play"></i>
+                        </a>
                     </span>
                 </div>
             </div>
