feat: button block

--- a/index.html
+++ b/index.html
@@ -260,10 +260,9 @@
                             target="_blank">Código
                             <i class="fa-brands fa-github"></i>
                         </a>
-                        <a class="btn-access-project" href="#"
-                            target="_blank">Live Demo
+                        <span class="btn-block" href="#" target="">Live Demo
                             <i class="fa-solid fa-play"></i>
-                        </a>
+                        </span>
                     </span>
                 </div>
                 <div class="show-project-img">
@@ -303,9 +302,8 @@
                         <a class="btn-access-project" href="https://github.com/Flipe124/atividade-lambda"
                             target="_blank">Código <i class="fa-brands fa-github"></i>
                         </a>
-                        <a class="btn-access-project" href="#" target="_blank">Live Demo <i
-                                class="fa-solid fa-play"></i>
-                        </a>
+                        <span class="btn-block" href="#" target="">Live Demo <i class="fa-solid fa-play"></i>
+                        </span>
                     </span>
                 </div>
             </div>
