feat: mod name curse

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <img src="./img/udemy-logo.jpg" alt="">
                 </div>
                 <div class="title">
-                    <div><b>Curso de Desenvolvedor Web</b></div>
+                    <div><b>Curso de Web Frontend</b></div>
                     <span>Udemy - Em andamento</span>
                 </div>
             </div>
